--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-scroll": "^1.8.10",
+    "framer-motion": "^11.11.17",
     "next": "15.0.3",
     "next-auth": "^4.24.10",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-countup": "^6.5.3",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
+    "react-responsive": "^10.0.0",
+    "react-scroll": "^1.9.0",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "eslint": "^8",
