--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "@types/react-scroll": "^1.8.10",
     "framer-motion": "^11.11.17",
     "next": "15.0.3",
