--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "@types/react-scroll": "^1.8.10",
     "framer-motion": "^11.11.17",
+    "motion": "^11.11.17",
     "next": "15.0.3",
     "next-auth": "^4.24.10",
     "react": "^18.2.0",
@@ -26,7 +27,9 @@
   "devDependencies": {
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
+    "flyonui": "^1.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
-  }
+  },
+  "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee"
 }
